--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+$primary-color: magenta;
+
+html,
+body,
+* {
+  box-sizing: border-box;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  text-align: center;
+}
+
+button,
+input[type='submit'] {
+  background-color: $primary-color;
+  border: 5px solid lighten($primary-color, 30%);
+  color: white;
+  margin: 0 0.5em;
+  padding: 1em;
+  outline: none;
+  &:hover {
+    background-color: darken($primary-color, 5%);
+  }
+  &:active {
+    background-color: darken($primary-color, 10%);
+  }
+}
+
+input {
+  padding: 1em;
+  &:not([type='submit']) {
+    display: block;
+    margin: 0.5em;
+  }
+}
+
+form {
+  padding: 0.5em;
+  margin: 1em 0;
+  display: flex;
+  flex-direction: column;
+  label {
+    text-align: center;
+    display: block;
+    margin-bottom: 0.5em;
+  }
+}
+
+main {
+  border: 5px solid lighten($primary-color, 40%);
+  font-weight: 700;
+  margin: 2em auto;
+  padding: 1em;
+  width: 600px;
+}
+
+header {
+  text-align: center;
+  padding: 0.5em;
+  background-color: lighten($primary-color, 30%);
 }
